# robot_and_sensor_hw

./: .travis.rosinstall  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  controllers_testing.yaml  kuka_ftc50.yaml  kuka_ftc50_controllers.yaml  powerball_ftc50.yaml  r5_ftc_sensor_configuration.yaml  r5_gravity.yaml  r5_params_fts.yaml  robot_and_sensor_hw.yaml  sensor_configuration_testing.yaml  sensor_offset.yaml  testing.yaml  testing_motor.yaml
include/robot_and_sensor_hw/: robot_and_sensor_hw.h
launch/: controller.yaml  hw.yaml  kuka_ftc50.launch  motor_node.launch  r5_force_controllers.yaml  r5_fts.launch  testing.launch
rviz/: iirob_kuka.rviz
src/: dummy_app.cpp  robot_and_sensor_hw.cpp  robot_and_sensor_hw_node.cpp
urdf/: ftm115.urdf.xacro  kuka_ftc50.urdf  r5.srdf  r5.urdf.xacro  r5_fts.urdf.xacro  sensor.urdf.xacro  testing.urdf.xacro
