<?xml version="1.0"?>
<package format="2">
  <name>robot_and_sensor_hw</name>
  <version>0.0.0</version>
  <description>The robot_and_sensor_hw package</description>
	
  <maintainer email="erik@todo.todo">erik</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_tests</depend>
	<depend>force_torque_sensor</depend>
	<depend>kuka_rsi_hw_interface</depend>
	<depend>kuka_rsi_simulator</depend>
	<depend>testing_controller</depend>
	<depend>iirob_kuka_bringup</depend>
	<depend>kuka_kr5_support</depend>
	<depend>r5_ikfast_arm_plugin</depend>

</package>
